--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,14 @@
 @import "tailwindcss";
 
+html,
+body,
+:root {
+  @apply h-full;
+}
+
+
 @custom-variant dark (&:is(.dark *));
+
 
 @theme inline {
   --color-background: var(--background);
@@ -118,6 +126,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
